css/style.css
html {
  font-family: 'roboto', sans-serif;
  background-color: #ecf0f1;
}


p {
  color: #353535;
}



#main-container {
  width: 90%;
  max-width: 900px;
  margin: 100px auto;
  text-align: center;
}

.toolbar {
  width: 100%;
  height: 65px;
  background-color: #3F51B5;
  box-shadow:  0 2px 5px rgba(0, 0, 0, 0.26);
  position: fixed;
  top: 0px;
  z-index: 100;
}


.view-menu {
  display: inline;
  float: left;
}


.view-menu ul {
  text-transform: uppercase;
  list-style: none;
  text-align: left;
  font-size: 0.95em;
}

.view-menu li {
  display: inline;
  height: 40px;
  padding: 17px 10px;
  margin: 0px 5px;
  line-height: 40px;
  transition: 0.199s ease-in all;

}

.view-menu li:active {
  background-color: rgba(255, 130, 172, 0.8);
}

.view-menu li a {
  height: inherit;
  color: white;
  text-decoration: none;
}


.view-menu li a:visited {
  color: white;
  text-decoration: none;
}

.view-menu-selected {
   border-bottom: 4px #FF4081 solid;
}

.speechControls {
  float: right;
}


.evalControls {
  margin-top: 15px;
  margin-left: 20px;
  float: left;
  padding: 5px 0px;
}



input#numOfEvals { 
  width: 45px;
  background-color: inherit;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: 1px solid #6172DB;
  font-size: 1.3em;
  color: #FFF; 
  box-shadow: none; /* removes red outline on firefox */
}


.nav-link {
  color: white;
}

.app-title {
  color: #FF4081;
  font-size: 2.8em;
}



label {
  color: #C5CAE9;
  font-weight: 100;
  font-size: 1em;
}

input[type="number"] {

  text-align: center;
  padding-left: 10px;
  background-color: #ecf0f1;
  color: #454545;
  border: 1px solid #d3d3d3;

  
}

input[type="number"]:focus {
  background-color: white;
  color: black;
  border-color: black;
}

input[type="text"] {

}


.action-btn {
  margin-right: 20px;
  margin-top: 40px;
  background-color: #FF4081;
  height: 50px;
  width: 50px;
  text-align: center;
  border: none;
  border-radius: 50%;
  box-shadow:  0 0 4px rgba(0, 0, 0, 0.14),0 4px 8px rgba(0, 0, 0, 0.28);
  color: #FFF;
  font-size: 1.8em;
  outline: none;
  transition: 0.1s all ease;
}

.action-btn:active {
  height: 45px;
  width: 45px;
}

.action-btn img {
  margin-top: 10px;
}


.save-status {
  color: #8F8F8F;
  font-weight: 100;
  margin-top: 50px;
}

/* Table UI styles
===========================*/
table {
  margin-top: 50px;
  width: 100%;
  border: 1px solid #d3d3d3;
  border-collapse: separate;
  border-spacing: 0;
   border-radius: 3px;
  background-color: #FCFCFC;
   -webkit-box-shadow: 0px 2px 5px 1px rgba(201,201,201,1);
  -moz-box-shadow: 0px 2px 5px 1px rgba(201,201,201,1);
        box-shadow: 0px 2px 5px 1px rgba(201,201,201,1);
}

.speech-ctrl {
  /* styles add/remove speech buttons*/
  color: #7986CB;
  text-transform: uppercase;
  border: none;
  background-color: transparent;
  transition: 0.2s ease-in background;
}




thead td {
  background-color: #FCFCFC;
  font-size: 0.95em;
  font-weight: bold;
  padding: 20px 0px;
  color: #3F51B5;
  border-bottom: 1px solid #d3d3d3;
  border-radius: 2px;
}

tbody td {
  font-size: 1em;
  font-weight: 100;
  padding: 20px 0px;
  color: #1A237E;
  border-bottom: 1px solid #EDEDED;
}

.active-indicator {
  background-color: #FF4081;
  height: 10px;
  width: 10px;
  display: inline-block;
  border-radius: 50%;
  margin-right: 5px;
  
  -webkit-animation: pulse 1s linear 0s infinite alternate;
     -moz-animation: pulse 1s linear 0s infinite alternate;
       -o-animation: pulse 1s linear 0s infinite alternate;
          animation: pulse 1s linear 0s infinite alternate;
}

@-webkit-keyframes pulse { from { background-color: #FF4081;  } to { background-color: #fdbad1; }  }
   @-moz-keyframes pulse { from { background-color: #FF4081; } to { background-color: #fdbad1; }  }
     @-o-keyframes pulse { from { background-color: #FF4081; } to { background-color: #fdbad1; }  }
        @keyframes pulse { from { background-color: #FF4081; } to { background-color: #fdbad1; }  }



.placeholder {
  background-color: #FCFCFC;
  color: #D3D3D3;
  border-bottom: 1px dashed #3e3e3e;
  border-top: none;
  border-left: none;
  border-right: none;
  border-bottom: 1px solid #D3D3D3;
  padding-bottom: 8px;
}

.saved {
  color: #353535 !important;
  border: none !important;
  background-color: #FCFCFC;
  font-weight: bold;
  text-align: center;

}

.rating-btn {
  border: 1px solid #C5CAE9;
  border-radius: 50%;
  background: none;
  color: #1A237E;
  height: 35px;
  width: 35px;
  transition: ease all 0.2s;
}


.rating-btn:focus,
.delete-btn:focus {
  outline: none;
}

.rating-btn:hover {
  border-color: #FF4081;
}

.rating-btn:active {
  border-color: #d1376c;
  background-color: #FF4081;
  color: #fff;
}


.rating-btn[disabled], 
.delete-btn[disabled] {

  color: #d3d3d3;
  cursor: not-allowed;
  border-color: #d3d3d3;
}

.delete-btn {
  border: 1px solid #C5CAE9;
  border-radius: 50%;
  background: none;
  height: 30px;
  width: 30px;
  transition: ease all 0.2s;
  color: #F44336;
  font-weight: bold;
  border-color: #F44336;
  -webkit-transform: rotate(47deg);
          transform: rotate(47deg);
  
}

.number-data {
  color: #FF4081;
  font-weight: 500;
}

.get-results-btn {
  margin-top: 40px;
  background-color: #FF4081;
  color: #FFF;
  padding: 10px 10px;
  text-align: center;
  text-transform: uppercase;
  font-weight: 100;
  border: none;
  border-radius: 2px;
  transition: 0.2s ease-in all;
}


/*------------------------------------------
* Grid Layout Styles
-------------------------------------------*/
.row {
  display: block;
  width: 100%;
}

.col {
  float: left;
  width: 50%;
}


/*------------------------------------------
* Modal
-------------------------------------------*/
.modal-wrap {
  margin: auto;
  padding-top: 150px;
  z-index: 500;
  position: absolute;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.95);;
  height: 100%;
  min-width: 100%;
  text-align: center;
}

.modal-wrap h2 {
  color: #FF4081;
  font-size: 2.3em;
}

.modal-wrap p {
  font-size: 1.2em;
  font-weight: 100;
  color: #FFF;
}


/*------------------------------------------
* Analytics Report Styles
-------------------------------------------*/
.card {
  margin-top: 15px;
  width: 90%;
  padding: 15px;
  background-color: #FFF;
  border-radius: 2px;
  -webkit-box-shadow: 0px 2px 5px 1px rgba(201,201,201,1);
  -moz-box-shadow: 0px 2px 5px 1px rgba(201,201,201,1);
        box-shadow: 0px 2px 5px 1px rgba(201,201,201,1);
}

.card-title {
  margin-top: 50px;
  font-size: 1.5em;
  font-weight: 100;
  text-align: center;
  color: #3F51B5; 
}



ol {
  margin-top: 45px;
}

ol li {
  /* for ranking card*/
  margin-top: 26px;
  border-bottom: 1px solid #D0D0D0;
  padding-bottom: 10px;
}



/*----------------------------------/
* Program Evaluation styles
*-----------------------------------*/
.question {
  margin-top: 30px;
}

.vote-btn {
  height: 80px;
  width: 80px;
  margin: 0px 10px;
}

.vote-btn:active { color: #FFF;}

div.count {
  font-weight: bold;
  color: #FF4081;
  font-size: 1.2em;
}

.card-title {
  color: #3F51B5;
}

.fav-btn {
  height: 40px;
  width: 40px;
  line-height: 50px;
}

.fav-btn:active {
  background: none !important;
}

.fav-btn:active img {
  -moz-transform: transform: scale(1.2);
  -webkit-transform:  transform: scale(1.2);
  -ms-transform:   transform: scale(1.2);
  transform: scale(1.2);
}

.favorites-table,
.proramRating-table {
  box-shadow: none !important;
}

.proramRating-table td {

  width: 35%;
  
}

